@@ -1,3 +1,8 @@
+2010-01-14  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fix RPM spec file.
+	* roboptim-core.spec.in: Here.
+
 2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Synchronize.
